--- a/chat/chat-app/www/js/chat/external-link-iframe.html
+++ b/chat/chat-app/www/js/chat/external-link-iframe.html
@@ -1,7 +1,7 @@
 <ion-view view-title="ExternalLinkIfram">
   <div class="external-link-iframe-view">
     <div class="bar bar-subheader bar-stable">
-      <a ng-click="vm.showConfirmExitAlert()" class="button-clear button button-icon icon ion-ios-arrow-back">&nbsp;Exit Survey</a>
+      <a ng-click="vm.goToChat()" class="button-clear button button-icon icon ion-ios-arrow-back">&nbsp;Exit Survey</a>
     </div>
 
     <iframe id="survey-iframe" class="iframe" frameborder="0"></iframe>
