Add in node server

--- a/context/index.html
+++ b/context/index.html
@@ -36,7 +36,7 @@
       var serverUrl = '';
 
       var setupScriptUrl =
-        (chatBaseUrl ? chatBaseUrl + '/chat' : serverUrl + '/base') + '/widget/js/setup.js';
+        (chatBaseUrl ? chatBaseUrl + '/chat' : serverUrl + '/dist/base') + '/widget/js/setup.js';
 
       // if there is no env override, create it and set the client-specific chatBaseUrl
       if (!window.__env || !window.__env.bot) {
