--- a/context/index.html
+++ b/context/index.html
@@ -1,49 +1,40 @@
-<!--
-  This is a development version of context index.html
-  To generate deployable version of index.html, run `gulp context:minify-html`
-  To generate deployable version of script for custom context, run `gulp context:minify-script`
--->
-<!DOCTYPE html>
+<!doctype html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <title>TAIGER - Converse</title>
-    <meta name="description" content="" />
-    <meta name="viewport" content="width=device-width" />
+<head>
+    <meta charset="utf-8">
+    <title>TAIGER - iConverse</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width">
 
     <style>
-      html {
-        background: #ddd;
-        -webkit-background-size: cover;
-        -moz-background-size: cover;
-        -o-background-size: cover;
-        background-size: cover;
-      }
+        html {
+            background: #DDD;
+            -webkit-background-size: cover;
+            -moz-background-size: cover;
+            -o-background-size: cover;
+            background-size: cover;
+        }
     </style>
 
-    <!-- start: converse chat widget script -->
-    <script async data-minify>
-      // Development version: botId will be overridden during `gulp serve`
-      // Deployed version: botId will be overridden in converse-bot-server jsp file
-      var botId = '';
+    <!-- start: iconverse chat widget script -->
+    <!-- GENERATE MINIFIED SCRIPT: Run `gulp minify` - outputs chat_insert_script.js at root folder -->
+    <script data-minify>
 
-      // Development version: chatBaseUrl will be overriden during `gulp serve` with url from BrowserSync
-      // Deployed version: chatBaseUrl is kept empty when serve by converse-bot-server
-      var chatBaseUrl = '';
-
-      // Development version: serverUrl will be overriden during `gulp serve`
-      // Deployed version: serverUrl will be overridden in converse-bot-server jsp file
-      var serverUrl = '';
-
-      var setupScriptUrl =
-        (chatBaseUrl ? chatBaseUrl + '/chat' : serverUrl + '/dist/base') + '/widget/js/setup.js';
+      /**
+       * chatBaseUrl will be programmatically modified by gulp, depending on the command
+       * DO NOT EDIT the `chatBaseUrl` variable name!
+       */
+      var chatBaseUrl = 'http://localhost:4200/';
 
       // if there is no env override, create it and set the client-specific chatBaseUrl
-      if (!window.__env || !window.__env.bot) {
-        if (!window.__env) window.__env = {};
-        window.__env.bot = botId;
-        window.__env.serverUrl = serverUrl;
+      if(!window.__env || !window.__env.chatBaseUrl) {
+        if(!window.__env) window.__env = {};
         window.__env.chatBaseUrl = chatBaseUrl;
+        /**
+         * btnColor will be programmatically modified by gulp, depending on the command
+         * DO NOT EDIT the variable name!
+         */
+        window.__env.btnColor = '#444';
       }
       (function() {
         var w = window;
@@ -52,7 +43,7 @@
           var s = d.createElement('script');
           s.type = 'text/javascript';
           s.async = true;
-          s.src = setupScriptUrl;
+          s.src = window.__env.chatBaseUrl + 'chat/widget/js/setup.js';
           var x = d.getElementsByTagName('script')[0];
           x.parentNode.insertBefore(s, x);
         }
@@ -69,10 +60,12 @@
       // Event handler for messages emitted by iframe
       window.addEventListener('message', function(e) {
         var msg = e.data;
-        if (msg.type === 'iconverse-event') {
+        if(msg.type === 'iconverse-event'){
           console.info('Recvd: ' + msg.state, msg);
-          var node = document.createElement('div');
-          var textnode = document.createTextNode(new Date(msg.timestamp) + ' - ' + msg.eventType);
+          var node = document.createElement("div");
+          var textnode = document.createTextNode(
+            new Date(msg.timestamp) + ' - ' + msg.eventType
+          );
           node.appendChild(textnode);
           document.getElementById('chatMsgLog').appendChild(node);
         }
@@ -81,41 +74,36 @@
 
     <script>
       // Toggle Chat Event Message Log
-      var togglePanel = function() {
+      var togglePanel = function () {
         var $logPanel = document.getElementById('chatLog');
-        $logPanel.style.display === 'none'
-          ? ($logPanel.style.display = 'block')
-          : ($logPanel.style.display = 'none');
-      };
+        $logPanel.style.display === 'none' ? $logPanel.style.display = 'block' : $logPanel.style.display = 'none';
+      }
     </script>
-  </head>
-  <body>
-    <div
-      id="chatLog"
-      style="
-        position: fixed;
-        display:none;
-        left: 20px;
-        bottom: 40px;
-        border: 3px solid #CCC;
-        height: 300px;
-        width: 450px;
-        padding: 10px;
-        margin: 0 auto;
-        overflow-y: scroll;
-        background-color: #FFF;"
-    >
-      <h4 style="color:#666;font-family: Arial; text-align: center">
-        Chat Event Message Log
+
+</head>
+<body>
+
+<div id="chatLog" style="
+	position: fixed;
+	display:none;
+	left: 20px;
+	bottom: 40px;
+	border: 3px solid #CCC;
+	height: 300px; 
+	width: 450px; 
+	padding: 10px;
+	margin: 0 auto;
+	overflow-y: scroll; 
+	background-color: #FFF;">
+    <h4 style="color:#666;font-family: Arial; text-align: center">Chat Event Message Log
         <div style="text-align:center; font-size:12px;">
-          <a
-            target="_blank"
-            href="https://docs.google.com/document/d/18G9sb60ZwHNdCM5cjomexHabUcM8_mFKlR5A6ua8x4Y/edit?usp=sharing"
-            >View API</a
-          >
+            <a target="_blank" href="https://docs.google.com/document/d/18G9sb60ZwHNdCM5cjomexHabUcM8_mFKlR5A6ua8x4Y/edit?usp=sharing">View API</a>
         </div>
-      </h4>
-      <div id="chatMsgLog" style="font-size:12px"></div>
-    </div>
-  </body>
+    </h4>
+
+
+    <div id="chatMsgLog" style="font-size:12px"></div>
+</div>
+
+</body>
 </html>
