--- a/chat/chat-app/www/js/chat/chat.html
+++ b/chat/chat-app/www/js/chat/chat.html
@@ -39,15 +39,15 @@
 
       <chat-bubble
         message="msg"
-        on-dropdown-select="vm.handleDropdownSelected(option)"
-        avatar-image-url="app.appOptions.botAvatarImageUrl"
         on-click-attachment="vm.clickAttachment(msg)"
         on-show-more="vm.didClickShowMore()"
         on-click-link="vm.clickChatLink(link)"
         on-click-choice="vm.clickChoice(choice, msg)"
         on-click-restart="vm.restartSession()"
         is-avatar-visible="app.appOptions.isChatBubbleAvatarVisible"
-        is-current-active-bubble="vm.isCurrentActiveBubble(msg)"
+        is-active-external-url-btn="vm.isActiveExternalUrlBtn(msg)"
+        is-active-msg="vm.isActiveMsg(msg)"
+        is-livechat-loading="app.isLivechatLoading"
         links-display-types="app.appOptions.messageLinkDisplayTypes"
         entry-transition="app.appOptions.bubbleEntryTransition"
         ng-repeat="msg in vm.conversation"
@@ -168,7 +168,7 @@
   ></voice-recognition>
 
   <!-- Autocomplete Suggestion List -->
-  <autocomplete-suggestions
+  <!-- <autocomplete-suggestions
     ng-if="vm.isAutocompleteVisible && app.appOptions.isAutocompleteOn && !vm.isRecording && !vm.conversation[vm.conversation.length-1].isPromptState"
     text-input="vm.autocompleteTextInput"
     cid="vm.cid"
@@ -176,7 +176,7 @@
     query-min-length="vm.queryMinLength"
     active-suggestion="vm.activeSuggestion"
     on-select-suggestion="vm.processAutocompleteSuggestion(suggestion)"
-  ></autocomplete-suggestions>
+  ></autocomplete-suggestions> -->
 
   <!-- Show the datepicker -->
   <ion-footer-bar ng-click="vm.didSelectInput()" keyboard-attach class="bar-chat-footer">
@@ -187,7 +187,7 @@
           <input
             id="chatInputField"
             ng-if="vm.isChatHomeView()"
-            ng-disabled="vm.isExpectTypeInput || vm.isRecording || vm.isInitialisingConversation || vm.isDropdownExpectInput"
+            ng-disabled="vm.isExpectTypeInput || vm.isRecording || vm.isInitialisingConversation"
             type="text"
             class="input-box"
             ng-model="vm.entry"
