Customize chat ui and point to wog server

--- a/context/index.html
+++ b/context/index.html
@@ -13,6 +13,7 @@
             -moz-background-size: cover;
             -o-background-size: cover;
             background-size: cover;
+            background-image: url(./prudential-bg.png);
         }
     </style>
 
@@ -89,11 +90,11 @@
 	left: 20px;
 	bottom: 40px;
 	border: 3px solid #CCC;
-	height: 300px; 
-	width: 450px; 
+	height: 300px;
+	width: 450px;
 	padding: 10px;
 	margin: 0 auto;
-	overflow-y: scroll; 
+	overflow-y: scroll;
 	background-color: #FFF;">
     <h4 style="color:#666;font-family: Arial; text-align: center">Chat Event Message Log
         <div style="text-align:center; font-size:12px;">
